<resources>
    <string name="app_name">EasyMarketApp</string>
    <string name="dietary_preferences">Preferencias Dietéticas</string>
    <string name="vegetarian">Vegetariano</string>
    <string name="celiac">Celiaco</string>
    <string name="select_budget">Selecciona Tu Presupuesto</string>
    <string name="budget_hint">Ingresa tu presupuesto</string>
    <string name="start">Comenzar</string>



    <string name="similar_options">Opciones similares</string>
    <string name="accept">Aceptar</string>
    <string name="lactose_intolerant">Intolerante a la lactosa</string>
    <string name="products_list">Lista de Productos</string>
    <string name="products_list_lactose_free">Productos Sin Lactosa</string>
    <string name="total_format">Total: $%s</string>
    <string name="total_format_with_budget">Total: $%s / Presupuesto: $%s</string>
    <string name="must_have_products">Primero debes tener productos en tu lista</string>
    <string name="price_format">$%s</string>

</resources>